--- a/website/src/pages/config.astro
+++ b/website/src/pages/config.astro
@@ -1,6 +1,6 @@
 ---
-import Layout from '../layouts/Layout.astro'
-import { InfoBar } from 'fluent-svelte'
+import: Layout from '../layouts/Layout.astro'
+import: { InfoBar } from 'fluent-svelte'
 ---
 
 <Layout title="Deprecated!" description="mollermethod now has a built-in settings UI" center unlisted>
