--- a/website/src/layouts/Markdown.astro
+++ b/website/src/layouts/Markdown.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from './Layout.astro'
-const {title, description} = Astro.props.frontmatter
+const: {title, description} = Astro.props.frontmatter
 ---
 <Layout {title} {description}>
 	<h1>{title}</h1>
