Revert "Update Button.astro"
This reverts commit 174948581650cab88744eab71f35ce9aebc5886e.

--- a/website/src/components/Button.astro
+++ b/website/src/components/Button.astro
@@ -1,6 +1,6 @@
 ---
-const: { pathname } = Astro.url
-const: { label, href } = Astro.props;
+const { pathname } = Astro.url
+const { label, href } = Astro.props;
 ---
 
 <div>
