--- a/website/src/pages/faq.astro
+++ b/website/src/pages/faq.astro
@@ -1,10 +1,10 @@
 ---
-import: Layout from "../layouts/Layout.astro"
-import: { Expander } from "fluent-svelte"
-import: Why from "../assets/about-symbolic.svg?raw"
-import: AppsList from "../assets/computer-chip-symbolic.svg?raw"
-import: Online from "../assets/online-symbolic.svg?raw"
-import: PuzzlePiece from "../assets/puzzle-piece-symbolic.svg?raw"
+import Layout from "../layouts/Layout.astro"
+import { Expander } from "fluent-svelte"
+import Why from "../assets/about-symbolic.svg?raw"
+import AppsList from "../assets/computer-chip-symbolic.svg?raw"
+import Online from "../assets/online-symbolic.svg?raw"
+import PuzzlePiece from "../assets/puzzle-piece-symbolic.svg?raw"
 ---
 
 <Layout title="mollermethod FAQ" description="some questions you may have, answered.">
