--- a/website/src/pages/checker.astro
+++ b/website/src/pages/checker.astro
@@ -1,7 +1,7 @@
 ---
-import TestPass from "../assets/test-pass-symbolic.svg?raw"
-import Layout from "../layouts/Layout.astro"
-import checker from '../assets/checker.png'
+import: TestPass from "../assets/test-pass-symbolic.svg?raw"
+import: Layout from "../layouts/Layout.astro"
+import: checker from '../assets/checker.png'
 ---
 
 <Layout center title="Compat Checker" description="Make sure your exploit works with mollermethod.">
